# gitv

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  TODO.md  design.md  mise.toml  requirements.md
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  coverage.yml  release.yml
crates/gitv-git-core/: Cargo.toml
crates/gitv-git-core/benches/: graph_bench.rs  memory_bench.rs  search_bench.rs
crates/gitv-git-core/src/: error.rs  gix_repo.rs  lib.rs  models.rs  repository.rs  self_test.rs  watcher.rs
crates/gitv-git-core/src/cache/: mod.rs
crates/gitv-git-core/src/graph/: arc.rs  calculator.rs  layout.rs  mod.rs  properties.rs  viewport.rs
crates/gitv-git-core/src/search/: engine.rs  mod.rs  query.rs
crates/gitv-git-core/src/stream/: mod.rs
crates/gitv-git-core/tests/: property_tests.proptest-regressions  property_tests.rs
crates/gitv-wgpu-renderer/: Cargo.toml
crates/gitv-wgpu-renderer/src/: lib.rs  renderer.rs  shaders.rs  vertex.rs
frontend/: README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: constants.ts  logging.ts  semver.test.ts  semver.ts
frontend/src/lib/actions/: draggable.ts
frontend/src/lib/bindings/: commands.ts  types.ts
frontend/src/lib/components/: AuthorLegend.svelte  BlamePanel.svelte  CommandPalette.svelte  CommitDetailPanel.svelte  CommitGraph.svelte  CommitList.svelte  CommitRow.svelte  ComparisonPanel.svelte  ContextMenu.svelte  DebugOverlay.svelte  DiffViewer.svelte  FileHistoryPanel.svelte  FileTree.svelte  InfoDialog.svelte  PreferencesModal.svelte  ResizeHandle.svelte  SearchBar.svelte  ShortcutHelp.svelte  StashDetailPanel.svelte  ToastContainer.svelte  Toolbar.svelte  Tooltip.svelte  WorkingChangesPanel.svelte
frontend/src/lib/components/Sidebar/: RefList.svelte  ReflogPanel.svelte  Sidebar.svelte  StashList.svelte
frontend/src/lib/components/graph/: GraphRenderer.svelte  WgpuGraph.svelte
frontend/src/lib/graph/: edge-interaction.ts  graph-math.ts  hide-merges.test.ts  hide-merges.ts  virtual-working-changes.test.ts  virtual-working-changes.ts
frontend/src/lib/locales/: de.json  en.json  zh-CN.json
frontend/src/lib/stores/: commands.ts  debug.ts  dialog.ts  layout.ts  locale.ts  preferences.ts  repository.ts  toast.ts
frontend/src/lib/utils/: a11y.ts  async-guard.ts  format-date.ts  highlight.ts  markdown.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/tests/: async-guard.test.ts
scripts/: check_bench_targets.py  check_regressions.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  state.rs  wgpu_state.rs
src-tauri/src/commands/: args.rs  commits.rs  debug.rs  diagnostics.rs  diff.rs  dump.rs  graph.rs  mod.rs  preferences.rs  reflog_stash.rs  render.rs  repository.rs  saved_searches.rs  search.rs  util.rs  watch.rs
