[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/gitv-git-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
gitv-git-core = { path = "crates/gitv-git-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
