[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/gitv-git-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
dirs = "6"
gitv-git-core = { path = "crates/gitv-git-core" }
gix = { version = "0.84", default-features = false, features = ["basic", "max-performance", "sha1"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
