[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/gitv-git-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
dirs = "6"
gitv-git-core = { path = "crates/gitv-git-core" }
gix = { version = "0.84", default-features = false, features = ["basic", "max-performance", "sha1", "blame", "status"] }
gix-diff = "0.64"
gix-index = "0.52"
gix-object = "0.61"
postcard = { version = "1", features = ["alloc"] }
regex = "1"
roaring = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
open = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
