[package]
name = "gitv"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "gitv_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
gitv-git-core = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
open = { workspace = true }
gitv-wgpu-renderer = { workspace = true }
pollster = "0.4"
