[package]
name = "gitv-git-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
gix = { workspace = true }
gix-diff = { workspace = true }
gix-object = { workspace = true }
postcard = { workspace = true }
regex = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
