[package]
name = "gitv-git-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
gix = { workspace = true }
gix-diff = { workspace = true }
gix-index = { workspace = true }
gix-object = { workspace = true }
postcard = { workspace = true }
regex = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
dhat = "0.3"

[[bench]]
name = "graph_bench"
harness = false
path = "benches/graph_bench.rs"

[[bench]]
name = "search_bench"
harness = false
path = "benches/search_bench.rs"

[[bench]]
name = "memory_bench"
harness = false
path = "benches/memory_bench.rs"
